<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:clickable="false"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textDirection="locale"
            android:textSize="48sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/textBtnClear"
            android:textSize="@dimen/keyTextSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnBackSpace" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonProcents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnProcents" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnDivide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnMultiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnMinus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnPlus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtn0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnPt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="@dimen/keyTextSize"
            android:text="@string/textBtnEquel" />

    </LinearLayout>

</LinearLayout>